[package]
name = "galah"
version = "0.1.0"
authors = ["Ben Woodcroft <benjwoodcroft@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Microbial genome dereplicator"
homepage = "https://github.com/wwood/galah"
repository = "https://github.com/wwood/galah"
documentation = "https://github.com/wwood/galah"
readme = "README.md"
exclude = [ # Max upload is 10MB, as of writing test data was 31MB
  "tests/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.*"
log = "0.4.*"
env_logger = "0.7.*"
#checkm = "0.0.1"
checkm = { git = "https://github.com/wwood/checkm-rs", rev = "b58ff8361c86ca2485e7f888467ca40ed01242ee" }
rayon = "1.0"
csv = "1.1"
bird_tool_utils = "0.1.0"
tempfile = "3.*"
finch = "0.3.*"
partitions = { version = "0.2.*", features = ["compact"] }
needletail = "0.3.*"

[dev-dependencies]
assert_cli = "0.6.*"
# Run things before commit but not push
cargo-husky = { version="1", default-features = false, features=["precommit-hook", "run-cargo-test", "run-cargo-fmt"] }
