[package]
name = "galah"
version = "0.3.1"
authors = ["Ben Woodcroft <benjwoodcroft@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Microbial genome dereplicator"
homepage = "https://github.com/wwood/galah"
repository = "https://github.com/wwood/galah"
documentation = "https://github.com/wwood/galah"
readme = "README.md"
exclude = [ # Max upload is 10MB, as of writing test data was 31MB
  "tests/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.*", features = ["cargo"] } # cargo feature required for crate_version!
log = "0.4.*"
env_logger = "0.9.*"
checkm = "0.1.*"
rayon = "1.5"
csv = "1.1"
# bird_tool_utils = "0.3.0"
bird_tool_utils = { git = "https://github.com/wwood/bird_tool_utils" }
tempfile = "3.*"
finch = "0.3.*"
partitions = { version = "0.2.*", features = ["compact"] }
needletail = "0.4.*"
bird_tool_utils-man = "0.4.0"
lazy_static = "1.4.0"
ansi_term = "0.12"

[dev-dependencies]
assert_cli = "0.6.*"
